<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/display"
            android:layout_width="@dimen/threeThirtyNineDP"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="0"
            android:gravity="end|center"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="@dimen/fortySP" />

        <Button
            android:id="@+id/zero"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/zero"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/one"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/one"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/two"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/two"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/three"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/three"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/four"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/four"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/five"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/five"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/six"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/six"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/seven"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/seven"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/eight"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/eight"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/nine"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nine"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/clear"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/clear"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/clearEntry"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/clearEntry"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/decimal"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/decimal"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/plusMinus"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/plusMinus"
            android:textSize="@dimen/twentyFiveSP" />

        <Button
            android:id="@+id/divide"
            android:layout_column="3"
            android:layout_row="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/divide"
            android:textSize="@dimen/twentyFiveSP"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/minus"
            android:layout_column="3"
            android:layout_row="4"
            android:background="@android:color/holo_green_light"
            android:text="@string/subtract"
            android:textSize="@dimen/twentyFiveSP"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/plus"
            android:layout_column="3"
            android:layout_row="3"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/add"
            android:textSize="@dimen/twentyFiveSP"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/multiply"
            android:layout_column="3"
            android:layout_row="2"
            android:background="@android:color/holo_purple"
            android:text="@string/multiply"
            android:textSize="@dimen/twentyFiveSP"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/equals"
            android:layout_width="@dimen/equalsWidth"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:background="?attr/colorAccent"
            android:text="@string/equals"
            android:textSize="@dimen/twentyFiveSP"
            android:textStyle="normal|bold" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>